# lnb_hakatons

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
lnb_hakatons/: __init__.py
lnb_hakatons/pipeline/: clean_data.py
notebooks/: check_data.ipynb
notebooks/old/: clean_data.ipynb
