[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lnb_hakatons"]

[project]
name = "lnb-hakatons"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "pre-commit>=4.3.0",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 88  # Set max line length
fix = true  # Enable automatic fixes

[tool.ruff.lint]
select = ["E", "F", "W", "C"]  # Enable common linting rules
ignore = ["E501"]  # Ignore line too long
